css fix for white space uyuni

--- a/branding/supplemental-ui/uyuni/uyuni-webui/css/site-extra.css
+++ b/branding/supplemental-ui/uyuni/uyuni-webui/css/site-extra.css
@@ -565,7 +565,7 @@ h1.page {
 
 #preamble+.sect1,
 .doc .sect1+.sect1 {
-  margin-top: -3.5rem;
+  /* margin-top: -3.5rem; */
 }
 
 .doc h2:not(.discrete) {
@@ -934,7 +934,7 @@ img.langIcon.china {
   display: block;
   content: " ";
   /* height: 130px; */
-  margin-top: -15px;
+  /* margin-top: -15px; */
   visibility: hidden;
   overflow: hidden;
 }
